<resources>
    <string name="app_name">RAJIN</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_presence">Presence</string>
    <string name="title_add_presence">Take Attendance</string>
    <string name="presensi">Presence</string>
    <string name="setting">Setting</string>
    <string name="submission">Submission</string>
    <string name="preference_file_key">org.informatika.rajin.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="request">Request</string>
    <string name="title_activity_take_attendance">Take Attendance</string>
    <string name="search">Search</string>
    <string name="title_history_presence">Presence History</string>
    <string name="title_request">Request History</string>
    <string name="sick">SAKIT</string>
    <string name="paid_leave">CUTI</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_msg">Selamat datang, silahkan login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Lupa password? Reset di sini</string>
    <string name="close">TUTUP</string>
    <string name="add_request">AJUKAN CUTI ATAU SAKIT</string>
    <string name="take_attendance">ISI KEHADIRAN</string>
    <string name="refresh_location">REFRESH LOKASI</string>
    <string name="choose_status">PILIH STATUS</string>
    <string name="wfo">WFO (Work From Office)</string>
    <string name="wfh">WFH (Work From Home)</string>
    <string name="presence">PRESENSI</string>
    <string name="cancel">BATAL</string>
    <string name="work_day">Hari Kerja</string>
    <string name="time_in">Jam Masuk</string>
    <string name="time_out">Jam Pulang</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="no_induk_pegawai">No Induk Pegawai</string>
    <string name="masukkan_kode_bergabung_terlebih_dahulu">Masukkan Kode Bergabung Terlebih Dahulu</string>
    <string name="sign_up">Sign Up</string>
    <string name="sudah_punya_akun_login_di_sini">Sudah punya akun? Login di sini</string>
</resources>