<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.informatika.if5250rajinapps.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_presence"
        android:name="org.informatika.if5250rajinapps.ui.presence_history.PresenceHistoryFragment"
        android:label="@string/title_history_presence"
        tools:layout="@layout/fragment_history_presence" />

    <fragment
        android:id="@+id/navigation_submission"
        android:name="org.informatika.if5250rajinapps.ui.request_history.RequestHistoryFragment"
        android:label="@string/title_request"
        tools:layout="@layout/fragment_history_request" />
</navigation>