<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:visibility="gone"
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Silahkan registrasi terlebih dahulu"
        android:textSize="20sp"

        android:layout_below="@id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        card_view:cardCornerRadius="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_person"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_key"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_type_password"
                app:startIconDrawable="@drawable/ic_key"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordConfirm"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_lengkap"
                app:startIconDrawable="@drawable/ic_person"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_induk_pegawai"
                app:startIconDrawable="@drawable/ic_person"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNoInduk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kode Bergabung Instansi"
                app:startIconDrawable="@drawable/ic_person"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKodeBergabung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Inside text input layout add
                      an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteInstansi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/masukkan_kode_bergabung_terlebih_dahulu"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progress_bar"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:backgroundTint="@color/purple_500"
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:textAlignment="center"
                android:id="@+id/tvLogin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun_login_di_sini"
                android:textColor="@android:color/holo_blue_dark"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
